Added privacy &Terms statment

--- a/app/assets/stylesheets/actiontext.css
+++ b/app/assets/stylesheets/actiontext.css
@@ -219,3 +219,7 @@ trix-toolbar .trix-button--dialog {
   box-shadow: 0 2px 8px rgba(0,0,0,0.08) !important;
   box-sizing: border-box !important;
 }
+.footer {
+  height: 150px; /* or any value you want */
+}
+
