--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -125,12 +125,7 @@
       </div>
     </div>
     
-    <footer class="footer has-background-light mt-3">
-      <div class="content has-text-centered">
-        <p><strong>Digital Diary</strong><br><span class="is-size-4 has-text-grey">Created By EasyABC-International &copy; <%= Time.current.year %></span></p>
-        <p class="mt-1">Made with Ruby on Rails & Bulma.</p>
-      </div>
-    </footer>
+   <%= render 'layouts/footer' %>
 
     <!-- Image Modal -->
     <div id="imageModal" class="modal">
