--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,6 +2,10 @@
 
 <h1>New event</h1>
 
+<div class="notification is-info is-light has-text-centered mb-4">
+  Today is <%= Time.zone.now.strftime("%A, %B %-d, %Y") %>
+</div>
+
 <%= render "form", event: @event %>
 
 <br>
